# pt.py

./: .gitignore  APK_CAPTURE_README.md  AndroidManifest.xml  CaptureActivity.java  CaptureActivity_Advanced.java  DEVELOPMENT.md  INSTALL_GUIDE.md  README.md  activate_pt_env.bat  build_apk.bat  capture.py  main.py  output-metadata.json  plant_stats.json  ptcapture.apk  ptcapture.apk.idsig  pyproject.toml  run.bat  setup.py
scripts/: __init__.py  __main__.py  analysis.py  main.py  path_utils.py  phone_interrogate.py  phone_logger.py
