[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plant-timelapse"
version = "1.0.0"
description = "Plant timelapse system using ADB to trigger Android phones and manage captures"
readme = "README.md"
license = "MIT"
authors = [{name = "Your Name"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
]

[project.scripts]
plant-timelapse = "scripts.main:run_app"

[tool.setuptools]
packages = ["scripts"]
